# resumer_parser

./: .gitignore  Architecture.md  Makefile  README.md  pyproject.toml
src/app/: __init__.py  framework.py  main.py  resume_extractor.py
src/app/domain/: __init__.py  models.py
src/app/extractors/: __init__.py  base.py  email_extractor.py  name_extractor.py  openai_llm_client.py  skills_extractor.py
src/app/parsers/: __init__.py  base.py  pdf_parser.py  word_parser.py
tests/integration/: test_cli.py  test_framework_integration.py
tests/unit/: test_email_extractor.py  test_env_loading.py  test_main_cli_unit.py  test_name_extractor.py  test_openai_llm_client.py  test_pdf_parser.py  test_resume_extractor.py  test_skills_extractor.py  test_word_parser.py
